# sqisign-rs

./: .gitignore  BENCH_HISTORY.csv  CLAUDE.md  Cargo.toml  PORTING.md  README.md  build.rs  rustfmt.toml
.cargo/: config.toml  mutants.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
benches/: bench.rs  bench_fp_asm.rs  bench_fp_ifma.rs
examples/: _ibz_audit.rs  sign_verify.rs
fuzz/: Cargo.toml  seed_corpus.py
fuzz/corpus/fuzz_verify/: regression_wrong_order_kernel
fuzz/fuzz_targets/: fuzz_decode_pk.rs  fuzz_decode_sig.rs  fuzz_fp2_decode.rs  fuzz_verify.rs
src/: lib.rs  params.rs  test_util.rs
src/common/: ctrdrbg.rs  fips202.rs  mem.rs  mod.rs
src/ec/: basis.rs  biextension.rs  isog_chains.rs  jac.rs  mod.rs  tests_mutants.rs  xisog.rs
src/gf/: fp.rs  fp2.rs  fp_lvl1_ifma.rs  fp_p27500.rs  fp_p5248.rs  fp_p65376.rs  fp_via_fp2crate.rs  fp_via_gf5248.rs  mod.rs
src/gf/gf5_248_vendored/: gf5_248.S  inline_asm.rs  mod.rs  utils64.rs
src/hd/: mod.rs  theta_ifma.rs  theta_isogenies.rs
src/id2iso/: dim2.rs  mod.rs
src/mp/: mod.rs
src/nistapi/: mod.rs
src/precomp/: e0_basis.rs  ec_params.rs  encoded_sizes.rs  fp_constants.rs  hd_splitting_transforms.rs  level.rs  mod.rs  sign_data.rs  sign_data_lvl1.rs  sign_data_lvl3.rs  sign_data_lvl5.rs  torsion_constants.rs
src/quaternion/: algebra.rs  dim2.rs  dim4.rs  dpe.rs  hnf.rs  ideal.rs  intbig.rs  intbig_backend_cryptobigint.rs  intbig_backend_malachite.rs  intbig_backend_rug.rs  integers.rs  lat_ball.rs  lattice.rs  lll.rs  mod.rs  normeq.rs  rationals.rs  types.rs
src/signature/: mod.rs
src/verification/: mod.rs
tests/: kat.rs  wycheproof.rs
tools/: build_dump.sh  build_dump_keygen.sh  build_extract.sh  c_malleability_check.c  dump_keygen.c  dump_verify_intermediates.c  extract_vectors.c  gen_precomp_sign.py  record_bench.sh  rewrite_ip.py
tools/perf/: README.md  c_kgsign_bench.c  c_verify_bench.c  rust_kg_sign.rs  rust_verify200.rs
