[package]
name = "sqisign-rs"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Rust implementation of the SQIsign post-quantum signature scheme"

[features]
default = ["lvl1", "sign"]
lvl1 = []
lvl3 = []
lvl5 = []
sign = ["dep:rug", "dep:gmp-mpfr-sys"]

[dependencies]
sha3 = "0.10"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
aes = "0.8"
rug = { version = "1.24", optional = true, features = ["integer", "rational"] }
gmp-mpfr-sys = { version = "1.6", optional = true, default-features = false }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(quaternion_isolation)'] }

[dev-dependencies]
hex = "0.4"

[[example]]
name = "sign_verify"
required-features = ["sign"]

[profile.release]
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
