[package]
name = "sqisign-rs"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the SQIsign post-quantum signature scheme"

[features]
default = ["lvl1", "sign"]
lvl1 = []
lvl3 = []
lvl5 = []
# Signing path: malachite (pure-Rust) is the default bigint backend.
sign = ["dep:malachite-nz", "dep:malachite-base"]
# Opt-in GMP backend via rug. Requires libgmp.
gmp = ["sign", "dep:rug", "dep:gmp-mpfr-sys"]
# Opt-in fixed-precision crypto-bigint backend (pure Rust, audited width).
cryptobigint = ["sign", "dep:crypto-bigint"]
# Opt-out of the vendored asm GF backend at lvl1 to use the in-tree
# unsaturated modarith reference instead. lvl3/lvl5 always use modarith.
gf-portable = []
# Exposes DRBG snapshot/restore for deterministic benchmark replays.
# Do not enable in production — leaks DRBG state.
bench-internals = []

[dependencies]
sha3 = "0.10"
zeroize = { version = "1.7", features = ["derive"] }
aes = { version = "0.8", features = ["zeroize"] }
malachite-nz = { version = "0.9", optional = true, default-features = false }
malachite-base = { version = "0.9", optional = true, default-features = false }
rug = { version = "1.24", optional = true, features = ["integer", "rational"] }
gmp-mpfr-sys = { version = "1.6", optional = true, default-features = false }
crypto-bigint = { version = "0.7.3", features = ["alloc", "zeroize"], optional = true }
hex-literal = "0.4"

[build-dependencies]
cc = "1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(quaternion_isolation)', 'cfg(ibz_audit)', 'cfg(gf5_248_asm)'] }
unsafe_code = "warn"
missing_debug_implementations = "warn"

[lints.clippy]
# Correctness/suspicious lints are deny — these catch real bugs.
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
# Style/complexity stay at warn; this is a faithful C port and many "fixes"
# would obscure the correspondence with the reference implementation.
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Intentional C-port patterns:
needless_range_loop = "allow"       # C index loops kept for line-by-line auditability
too_many_arguments = "allow"        # mirrors C function signatures
many_single_char_names = "allow"    # mathematical variable names (a, b, c, p, q)
similar_names = "allow"             # ditto
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"  # intentional in modarith reduction
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
wildcard_imports = "allow"          # crate::ec::*, crate::gf::* keep ports readable
result_unit_err = "allow"           # NIST API uses int return; mapped to Result<_, ()>
unreadable_literal = "allow"        # precomputed hex constants
inline_always = "allow"             # hot inner loops in modarith
doc_markdown = "allow"
too_many_lines = "allow"            # large algorithm functions ported from C
cast_precision_loss = "allow"       # intentional u64→f64 truncation in dpe.rs (matches GMP)
float_cmp = "allow"                 # dpe.rs comparing f64 mantissas
used_underscore_binding = "allow"   # _ibz_audit cfg-gated locals
should_implement_trait = "allow"    # Dpe::cmp matches the C dpe_cmp name
items_after_statements = "allow"
struct_field_names = "allow"
match_bool = "allow"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.4"

[[example]]
name = "sign_verify"
required-features = ["sign"]

[[example]]
name = "_ibz_audit"
required-features = ["sign"]

[[bench]]
name = "bench"
harness = false
required-features = ["bench-internals"]

[[bench]]
name = "bench_fp_asm"
harness = false
required-features = ["lvl1"]

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[profile.test]
opt-level = 2
